PyMaker/datas/object2/RawHTML/i15401/Python_DOC_referPages.syntax-error-in-a-for-loop-in-python.txt
<div class="post-text" itemprop="text">
<p>this is my first question here but I've visited this site many times to find answers.
I'm facing what seems to be a really dumb problem.
I'm trying to create a '2d' list in python but a syntax error is teasing me.
Here is my code:</p>
<pre><code>def gen2darr(row, column):  # generates an array
    for in range row:
        arr.append([])  # create the lines
    for i in range row:
        for in range column:
            arr[i].append(float(int(row*column*random)))   
            # fills the array, float(int( because I want floats that 'are ints', 
            # ex: 2.0 or 152.0
</code></pre>
<p>and here is what I get:</p>
<pre><code>    for in range row:
         ^
SyntaxError: invalid syntax
</code></pre>
<p>I've tried putting a value in the for loop in this way:</p>
<pre><code>    for j in range row:
</code></pre>
<p>but I then get this:</p>
<pre><code>    for j in range row:
                     ^
SyntaxError: invalid syntax
</code></pre>
<p>Can someone help me with this?
For me syntax error means I'm likely missing a bracket or a coma somewhere but I cannot find it.</p>
</div>
<div class="post-text" itemprop="text">
<p>If you want to use a range, then you need to <strong>call</strong> the  function:</p>
<pre><code>for j in range(row):
</code></pre>
<p><code>range</code> is not part of the Python syntax, it is just another <a href="https://docs.python.org/3/library/stdtypes.html#ranges" rel="nofollow">built-in object type</a>.</p>
</div>
<div class="post-text" itemprop="text">
<p>The syntax is:</p>
<pre><code>for j in range(row):
</code></pre>
<p><code>range</code> is a function taking an argument. And you have to specify which variable you will use to iterate (<code>j</code>)</p>
</div>
<div class="post-text" itemprop="text">
<p>The range function have following syntax: range(limit 1, limit 2), you pass like argument a size of array you want.</p>
</div>
<span class="comment-copy">Look up what <code>range</code> does, and how you use it.</span>
<span class="comment-copy">Look up what <code>for</code> does, and how you use it.</span>
<span class="comment-copy">Do you expect this 2D list to get filled with random numbers? It won't. But you need to read the docs on the <code>random</code> module to understand why.</span>
<span class="comment-copy">Thanks a lot! Somehow, I though I could not use the brackets</span>
